--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,16 +3,13 @@ name: Build source code
 on:
   push:
   pull_request:
+  workflow_dispatch:
 
 jobs:
   build:
     strategy:
       matrix:
-        os: 
-          [
-            ubuntu-22.04,
-            ubuntu-20.04,
-          ]
+        os: [ubuntu-22.04, ubuntu-20.04]
         compiler: [gcc, clang]
     runs-on: ${{ matrix.os }}
     steps:
